--- a/css-layout/index.html
+++ b/css-layout/index.html
@@ -7,14 +7,16 @@
     <title>CLS-assignments-Caroline</title>
 </head>
 <body>
-    <h1>A Simple Portfolio</h1>
+    <h1>CSS Layout</h1>
 
-    <h2>
-        Week 2 
-    </h2>
-    
     <p>
-        <a href="css-layout/index.html">CSS Layout</a>
+        <a href="css-layout/layout01/layout01.html">layout 01</a>
+    </p>
+    <p>
+        <a href="css-layout/layout02/layout02.html">layout 02</a>
+    </p>
+    <p>
+        <a href="css-layout/layout03/layout03.html">layout 03</a>
     </p>
 
     
