--- a/css-layout/index.html
+++ b/css-layout/index.html
@@ -10,13 +10,13 @@
     <h1>CSS Layout</h1>
 
     <p>
-        <a href="css-layout/layout01/layout01.html">layout 01</a>
+        <a href="layout01/layout01.html">layout 01</a>
     </p>
     <p>
-        <a href="css-layout/layout02/layout02.html">layout 02</a>
+        <a href="layout02/layout02.html">layout 02</a>
     </p>
     <p>
-        <a href="css-layout/layout03/layout03.html">layout 03</a>
+        <a href="layout03/layout03.html">layout 03</a>
     </p>
 
     
