--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>CLS-assignments-Caroline</title>
 </head>
 <body>
-    <h1>A Simple Portfolio</h1>
+    <h1>A Very Very Simple Portfolio</h1>
+
+    <h2>
+        Week 1 
+    </h2>
+    
+    <p>
+        <a href="../test-site-caroline/index.html">My first Page</a>
+    </p>
 
     <h2>
         Week 2 
