--- a/css-layout/layout01/layout01.html
+++ b/css-layout/layout01/layout01.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,21 +10,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
-    <div class = "container">
-    <li class = "part01">
-        part01
-    </li>
-    <li class = "part02">
-        <p>
-            part02
-        </p>
-    </li>
-    <li class = "part03">
-        part03
-    </li>
+    <div class="part01">
+        <div class="c">
+            Website.com
+        </div>
+        <div class="b">more</div>
+        <div class="b">about</div>
+        <div class="b"><span class="d">home</span></div>
+    </div>
+    <div class="container">
+
+        <div class="part02">
+            <p>
+                Website.com
+            </p>
+        </div>
+        <div class="part03">
+            <h1>
+                Website of the year
+            </h1>
+
+            <p>
+                According to <strong>everyone</strong>. If you don't believe it then <span class="a">you just don't get it</span>.
+            </p>
+            <p>Sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text sample text </p>
+
+        </div>
 
 
     </div>
 </body>
+
 </html>
